# learn-openai-agent-sdk

./: README.md
01_basic_examples/: 01_hello_world.ipynb  02_multiple_agents.ipynb  03_multiple_agents_guardrail.ipynb  04_result_evaluation.ipynb  05_custom_llm_provider_agent_level.ipynb  06_custom_llm_provider_run_level.ipynb  07_custom_llm_provider_global_level.ipynb
02_demo_chainlit/: README.md  pyproject.toml
02_demo_chainlit/src/demo_chainlit/: __init__.py  app.py  chatbot.py
03_demo_fastapi_websocket/: README.md  pyproject.toml
03_demo_fastapi_websocket/src/demo_fastapi_websocket/: __init__.py  app.py  models.py  websocket_manager.py
03_demo_fastapi_websocket/src/demo_fastapi_websocket/static/: index.html
04_chatbot_fastapi_websocket_nextjs/backend/: .env.example  README.md  pyproject.toml
04_chatbot_fastapi_websocket_nextjs/backend/src/chatbot_fastapi_websocket_nextjs/: agent.py  app.py  models.py  websocket_manager.py
04_chatbot_fastapi_websocket_nextjs/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
04_chatbot_fastapi_websocket_nextjs/frontend/app/: page.tsx
04_chatbot_fastapi_websocket_nextjs/frontend/components/: ChatHeader.tsx  ChatInput.tsx  ConnectingOverlay.tsx  MessageList.tsx
