[project]
name = "demo-fastapi-websocket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zeeshanhanif", email = "zeeshanhanif@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0"
]

[project.scripts]
app = "demo_fastapi_websocket:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
