[project]
name = "chatbot-fastapi-websocket-nextjs"
version = "0.1.0"
description = "Chatbot application using FastAPI with WebSocket support and Next.js frontend"
readme = "README.md"
authors = [
    { name = "zeeshanhanif", email = "zeeshanhanif@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "openai>=1.76.2",
    "openai-agents>=0.0.14",
]

[project.scripts]
app = "chatbot_fastapi_websocket_nextjs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
